frontend/src/styles.css
.jqx-loader {
  z-index: 111 !important;
}

.jqx-loader-modal {
  z-index: 110 !important;
}

.first-level-dialog {
  z-index: 105 !important;
}

.first-level-dialog + .jqx-window-modal {
  z-index: 104 !important;
}

.second-level-dialog {
  z-index: 107 !important;
}

.second-level-dialog + .jqx-window-modal {
  z-index: 106 !important;
}

.third-level-dialog {
  z-index: 109 !important;
}

.third-level-dialog + .jqx-window-modal {
  z-index: 108 !important;
}

.main-window {
  z-index: 101 !important;
}

.main-window + .jqx-window-modal {
  z-index: 100 !important;
}

.ace_editor {
  margin: auto;
  height: 100%;
  width: 100%;
}

.msgBoxIcons {
  display: inline-block;
  width: 16px;
  height: 16px;
  position: relative;
  top: 4px;
  margin-right: 3px;
}

.msgBoxInfoIcon {
  background-image: url("/nexl/site/icons/lamp.png");
}

.msgBoxWarningIcon {
  background-image: url("/nexl/site/icons/prohibit.png");
}

.msgBoxErrorIcon {
  background-image: url("/nexl/site/icons/error.png");
}

